--- a/meson.build
+++ b/meson.build
@@ -254,7 +254,13 @@ bpf_extra_cflags = get_option('bpf_extra_cflags')
 sys_incls = run_command(get_sys_incls, bpf_clang, check: true).stdout().splitlines()
 bpf_base_cflags = ['-g', '-O2', '-Wall', '-Wno-compare-distinct-pointer-types',
                    '-D__TARGET_ARCH_' + arch_dict[cpu], '-mcpu=v3',
-                   '-m@0@-endian'.format(host_machine.endian())] + sys_incls + bpf_extra_cflags
+                   '-m@0@-endian'.format(host_machine.endian())] + sys_incls
+
+if bpf_extra_cflags != []
+  foreach flag: bpf_extra_cflags
+    bpf_base_cflags += flag
+  endforeach
+endif
 
 if get_option('werror')
   bpf_base_cflags += '-Werror'
