--- a/meson.build
+++ b/meson.build
@@ -252,7 +252,7 @@ endif
 bpf_extra_cflags_str = get_option('bpf_extra_cflags')
 bpf_extra_cflags = []
 if bpf_extra_cflags_str != ''
-  bpf_extra_cflags = bpf_extra_cflags_str.split()
+  bpf_extra_cflags = bpf_extra_cflags_str.split('?')
 
 sys_incls = run_command(get_sys_incls, bpf_clang, check: true).stdout().splitlines()
 bpf_base_cflags = ['-g', '-O2', '-Wall', '-Wno-compare-distinct-pointer-types',
